<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:nestedScrollingEnabled="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:autoText="false" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ConjBtn"
                    android:id="@+id/button"
                    android:onClick="ConjugBtn"
                    android:layout_marginRight="10dp"
                    android:background="#30000000" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Traduit"
                    android:id="@+id/button2"
                    android:background="#b3ff1500"
                    android:onClick="translateBtn" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/indicative"
                android:id="@+id/textView2"
                android:background="#3a98009f"
                android:textSize="30dp"
                android:textIsSelectable="false"
                android:elegantTextHeight="false"
                android:singleLine="false" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/present"
                android:layout_marginLeft="20dp"></LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/conditional"
                android:id="@+id/textView3"
                android:textSize="30dp"
                android:textIsSelectable="false"
                android:background="#3a98009f" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:id="@+id/conditional"></LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/subjunctive"
                android:id="@+id/textView4"
                android:textSize="30dp"
                android:textIsSelectable="false"
                android:background="#3a98009f" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:id="@+id/subjunctive"></LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/imperfect"
                android:id="@+id/textView5"
                android:textSize="30dp"
                android:textIsSelectable="false"
                android:background="#3a98009f" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:focusableInTouchMode="false"
                android:id="@+id/imperative"></LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/participle"
                android:id="@+id/textView6"
                android:textSize="30dp"
                android:textIsSelectable="false"
                android:background="#3a98009f" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:id="@+id/participle"></LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ZoomControls
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zoomControls"
        android:layout_alignBottom="@+id/scrollView3"
        android:layout_alignEnd="@+id/scrollView3"
        android:orientation="horizontal" />

</RelativeLayout>
